# juanjuan-spider

./: .gitignore  .versionrc  README.md  package.json  pyproject.toml  requirements.txt  scrape.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  decisions.md  lessons.md  plan-extraction-quality.md  research-crawlee-architecture.md  research-crawler-deep-review.md  research-open-source-crawlers.md  status.md
docs/chains/: README.md  architecture.md  evolution.md  reasoning.md  requirements.md  retrospective.md  verification.md
scripts/: project-boot.sh  sync.sh  verify.sh
spider/: __init__.py  main.py
spider/adapters/: default.py  finance.py  news.py  social.py  tech.py
spider/core/: engine.py  extractor.py  result.py  router.py
spider/engines/: crawl4ai_engine.py  http_engine.py
spider/infra/: config.py
spider/mcp/: __main__.py  server.py
tests/: test_adapter.py  test_config.py  test_extractor.py  test_mcp.py  test_result.py  test_router.py  test_storage.py
