[project]
name = "juanjuan-spider"
version = "0.5.0"
description = "通用网页爬取工具 — 双引擎路由 + trafilatura 正文提取 + MCP Server"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.0",
    "httpx>=0.27.0",
    "markdownify>=0.14.0",
    "mcp>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # function call in default argument (dataclass field)
    "SIM108", # ternary operator (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["spider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
